--- a/birthday-master/index.html
+++ b/birthday-master/index.html
@@ -75,6 +75,16 @@
                             $(this).addClass('rotate');
                         }
                     });
+                    document.addEventListener('DOMContentLoaded', function () {
+                     function audioAutoPlay() {
+                        var audio = document.getElementById('main_audio');
+                        audio.play();
+                        document.addEventListener("WeixinJSBridgeReady", function () {
+                            audio.play();
+                        }, false);
+                     }
+                     audioAutoPlay();
+                    });
 
                 })
             </script>
