--- a/birthday-master/index.html
+++ b/birthday-master/index.html
@@ -14,7 +14,7 @@
 <div id="mainDiv">
     <div id="content">
         <div id="code">
-            <span class="comments">亲爱的苏博洋女士：</span><br/><br/>
+            <span class="comments">亲爱的苏博洋女士-：</span><br/><br/>
             <span class="comments">值此深秋</span><br/>
             <span class="comments">我二位在此恭贺</span><br/><br/>
             <span class="comments">身体健康；万事如意；心想事成；学业进步</span><br/><br/>
@@ -25,7 +25,9 @@
             <br><br>
             <span class="comments"><b class="bb">仓促赠礼 汤欣宇 黄炫</b></span>
         </div>
-        <div id="loveHeart">
+        
+    </div>
+    <div id="loveHeart">
             <canvas id="garden"></canvas>
             <div id="words">
                 <div id="messages">
@@ -36,7 +38,6 @@
                 </div>
             </div>
         </div>
-    </div>
     <div id="copyright">
         <center>
             <link rel="stylesheet" href="./css/cuplayer.css">
