--- a/birthday-master/index.html
+++ b/birthday-master/index.html
@@ -27,7 +27,7 @@
         </div>
         
     </div>
-    <div id="loveHeart" style="position:absolute; bottom:100px; left:100px;">
+    <div id="loveHeart" style="position:absolute; bottom:20px; left:20px;">
             <canvas id="garden"></canvas>
             <div id="words">
                 <div id="messages">
@@ -76,15 +76,6 @@
                             $(this).addClass('rotate');
                         }
                     });
-                    document.addEventListener('DOMContentLoaded', function () {
-                     function audioAutoPlay() {
-                        a.play();
-                        document.addEventListener("WeixinJSBridgeReady", function () {
-                            a.play();
-                        }, false);
-                     }
-                     audioAutoPlay();
-                    });
 
                 })
             </script>
@@ -123,6 +114,35 @@
         adjustCodePosition();
         $("#code").typewriter();
     }
+
+	// 音乐播放
+function autoPlayMusic() {
+    // 自动播放音乐效果，解决浏览器或者APP自动播放问题
+    function musicInBrowserHandler() {
+        musicPlay(true);
+        document.body.removeEventListener('touchstart', musicInBrowserHandler);
+    }
+    document.body.addEventListener('touchstart', musicInBrowserHandler);
+
+    // 自动播放音乐效果，解决微信自动播放问题
+    function musicInWeixinHandler() {
+        musicPlay(true);
+        document.addEventListener("WeixinJSBridgeReady", function () {
+            musicPlay(true);
+        }, false);
+        document.removeEventListener('DOMContentLoaded', musicInWeixinHandler);
+    }
+    document.addEventListener('DOMContentLoaded', musicInWeixinHandler);
+}
+function musicPlay(isPlay) {
+    var media = document.querySelector('#main_audio');
+    if (isPlay && media.paused) {
+        media.play();
+    }
+    if (!isPlay && !media.paused) {
+        media.pause();
+    }
+}
 </script>
 </div>
 
