--- a/birthday-master/index.html
+++ b/birthday-master/index.html
@@ -27,7 +27,7 @@
         </div>
         
     </div>
-    <div id="loveHeart" style="position:absolute; bottom:20px; left:20px;">
+    <div id="loveHeart" style="position:absolute; bottom:10px; right:10px;">
             <canvas id="garden"></canvas>
             <div id="words">
                 <div id="messages">
