--- a/birthday-master/index.html
+++ b/birthday-master/index.html
@@ -14,7 +14,7 @@
 <div id="mainDiv" style="position:absolute; top:-100px; left:100px;">
     <div id="content">
         <div id="code" >
-            <span class="comments">亲爱的苏博洋女士-：</span><br/><br/>
+            <span class="comments">亲爱的苏博洋女士：</span><br/><br/>
             <span class="comments">值此深秋</span><br/>
             <span class="comments">我二位在此恭贺</span><br/><br/>
             <span class="comments">身体健康；万事如意；心想事成；学业进步</span><br/><br/>
