--- a/birthday-master/index.html
+++ b/birthday-master/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title> bth-ecard</title>
+    <title> 加拿大鹅评测</title>
     <link rel="icon" href="./images/favicon.ico">
     <link href="./css/style.css" type="text/css" rel="stylesheet">
     <script src="./js/jquery.js"></script>
